# mcp_fastmcp_server

./: .env.example  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  di.py  logging.py
app/services/: __init__.py  artifacts.py  filesystem.py  httpclient.py  kvstore.py  validator.py
scripts/: run_http.sh  run_server.sh  setup.sh  test.sh
server/: http_app.py  main.py  registry.py
server/tools/: README.md  artifacts.py  files.py  http_fetch.py  json_validate.py  kv.py
tests/: test_artifacts.py  test_files.py  test_json_validator.py
